# monocular_exploration

./: .gitignore  .gitmodules  AirSim-settings.json  README.md  catkin_make_python3.sh  python_requirements.txt
cv_bridge/src/: CMakeLists.txt
cv_bridge_4/: CMakeLists.txt
my_airsim_pkgs/: CMakeLists.txt  nodelet_plugins.xml
my_airsim_pkgs/launch/: position_controller_simple.launch
my_airsim_pkgs/src/: airsim_nodelet.cpp
my_pipeline/: CMakeLists.txt  package.xml
my_pipeline/calibration/: EuRoC_mono.yaml  ost.txt  ost.yaml  ost_wide.txt  s20_openvslam.yaml
my_pipeline/cfg/: airsim_semantic_esdf.rviz  flame.rviz  flame_euroc.rviz  flame_nodelet.yaml  flame_nodelet_euroc.yaml  flame_nodelet_s20.yaml  rviz_esdf.rviz  semantic_esdf.rviz
my_pipeline/launch/: algorithm_esdf.xml  only_gstreamer.launch  play.launch  play_tum.launch  play_tum_esdf.launch  play_tum_esdf_tdnet.launch  real_play_tum_esdf_tdnet.launch  record_tum.launch  test_esdf.launch  with_flame.launch
my_pipeline/launch/with_airsim/: esdf_with_airsim.launch  lidar_with_airsim.launch  play_with_airsim.launch
my_pipeline/src/: tum_tf_converter.cpp
orb_slam2_cuda/: CMakeLists.txt  nodelet_plugins.xml  package.xml
orb_slam2_cuda/launch/: ros_mono_cam.launch
orb_slam2_cuda/lib/: SlamData.cc  SlamData.h  orb_slam_wrapper.cc  orb_slam_wrapper.h
orb_slam2_cuda/src/: orb_slam_mono_node.cc  orb_slam_mono_nodelet.cc  ros_mono.cc
src/cv_bridge_4/: package.xml
src/cv_bridge_4/src/: CMakeLists.txt
src/my_airsim_pkgs/: nodelet_plugins.xml  package.xml
src/my_airsim_pkgs/launch/: airsim_node.launch  airsim_nodelet.launch  position_controller_simple.launch
src/my_pipeline/: CMakeLists.txt  package.xml
src/my_pipeline/calibration/: TUM1_rect.yaml  airsim.yaml  ost.txt  ost.yaml  ost_wide.yaml  s20.yaml  s20_wide.yaml  s20_wide_openvslam.yaml
src/my_pipeline/cfg/: airsim_groundtruth_esdf.rviz  airsim_semantic_esdf.rviz  flame.rviz  flame_nodelet_airsim.yaml  flame_nodelet_s20.yaml
src/my_pipeline/cfg/vins_config/: airsim_config.yaml
src/my_pipeline/launch/: algorithm_esdf.xml  algorithm_only_esdf.xml  algorithm_only_esdf_nodelet.xml  gstreamer_esdf.launch  gstreamer_esdf_nodelets.launch  only_gstreamer.launch  only_gstreamer_record.launch  play_tum.launch  play_with_airsim.launch  play_with_airsim_semantic.launch
src/my_pipeline/launch/with_airsim/: esdf_play_with_no_ground_truths.launch  esdf_play_with_no_ground_truths_nodelets.launch  esdf_with_airsim.launch  flame_play_with_no_ground_truths.launch  gstreamer_esdf_with_no_ground_truths.launch  gstreamer_play_with_no_ground_truths_nodelets.launch  lidar_with_airsim.launch  play_with_airsim.launch  play_with_airsim_pid.launch  play_with_airsim_so3.launch  play_with_airsim_so3_semantic.launch  play_with_airsim_so3_semantic2.launch  play_with_no_ground_truths.launch  play_with_no_ground_truths_nodelets.launch  vins_flame_only.launch  vins_only.launch  vins_play_with_airsim_so3_semantic.launch
src/my_pipeline/src/: performance_meter.cpp
src/orb_slam2_cuda/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/orb_slam2_cuda/launch/: ros_mono.launch
src/orb_slam2_cuda/lib/: orb_slam_wrapper.cc  orb_slam_wrapper.h
src/orb_slam2_cuda/src/: orb_slam_mono_node.cc  orb_slam_mono_nodelet.cc
