<?xml version="1.0"?>
<package format="2">
    <name>orb_slam2_cuda</name>
    <version>0.0.0</version>
    <description>CUDA_ORB_SLAM2</description>
    <license>2-clause BSD</license>
    <maintainer email="ichihara.mitsumasa@aist.go.jp">Mitsumasa Ichihara</maintainer>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>cv_bridge_4</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>tf</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>image_transport</build_export_depend>
    <build_export_depend>cv_bridge_4</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>cv_bridge_4</exec_depend>

</package>
